force-app/main/default/objects/Disease_Conditions__c/Disease_Conditions__c.object-meta.xml
<CustomObject>
    <label>Disease/Conditions</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Disease/Conditions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disease/Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>