force-app/main/default/objects/Disease_Conditions__c/fields/Allergies_Adverse_Reactions__c.field-meta.xml
<CustomField>
    <fullName>Allergies_Adverse_Reactions__c</fullName>
    <label>Allergies/Adverse Reactions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergic Rhinitis/Conjunctivitis (Hay Fever, Nose/Eye Allergies)</fullName>
            </value>
            <value>
                <fullName>Cats</fullName>
            </value>
            <value>
                <fullName>Dust</fullName>
            </value>
            <value>
                <fullName>Eggs</fullName>
            </value>
            <value>
                <fullName>Fish (tuna, flounder, cod, etc.).</fullName>
            </value>
            <value>
                <fullName>Food Allergies.</fullName>
            </value>
            <value>
                <fullName>Grass pollen (Summer)</fullName>
            </value>
            <value>
                <fullName>Insect Stings</fullName>
            </value>
            <value>
                <fullName>Medications (Specify)</fullName>
            </value>
            <value>
                <fullName>Milk.</fullName>
            </value>
            <value>
                <fullName>Mold</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other Animal (Specify)</fullName>
            </value>
            <value>
                <fullName>Other Food (Specify)</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Peanuts</fullName>
            </value>
            <value>
                <fullName>Perfume/ Dyes</fullName>
            </value>
            <value>
                <fullName>Ragweed (Autumn)</fullName>
            </value>
            <value>
                <fullName>Shellfish (crab, lobster, shrimp)</fullName>
            </value>
            <value>
                <fullName>Soy</fullName>
            </value>
            <value>
                <fullName>Tobacco Smoke</fullName>
            </value>
            <value>
                <fullName>Tree nuts ( almond, cashew, walnut, etc.)</fullName>
            </value>
            <value>
                <fullName>Tree pollen (Spring)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
                <isActive>false</isActive>
                <label>Food</label>
            </value>
            <value>
                <fullName>Insect Bites</fullName>
                <isActive>false</isActive>
                <label>Insect Bites</label>
            </value>
            <value>
                <fullName>Medications</fullName>
                <isActive>false</isActive>
                <label>Medications</label>
            </value>
            <value>
                <fullName>Plants</fullName>
                <isActive>false</isActive>
                <label>Plants</label>
            </value>
            <value>
                <fullName>Pollen/ Ragweed</fullName>
                <isActive>false</isActive>
                <label>Pollen/ Ragweed</label>
            </value>
            <value>
                <fullName>Second Hand Smoke</fullName>
                <isActive>false</isActive>
                <label>Second Hand Smoke</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>