force-app/main/default/objects/Disease_Conditions__c/fields/Chronic__c.field-meta.xml
<CustomField>
    <fullName>Chronic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chronic</label>
    <type>Checkbox</type>
</CustomField>