force-app/main/default/objects/Disease_Conditions__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Disease/Conditions</relationshipLabel>
    <relationshipName>Disease_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>