force-app/main/default/objects/Disease_Conditions__c/fields/Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Medical_Conditions__c</fullName>
    <label>Medical Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Abdominal Pain, Chronic/Frequent</fullName>
            </value>
            <value>
                <fullName>Acne</fullName>
            </value>
            <value>
                <fullName>Alcohol Use Disorder (details under Behav. Health ta</fullName>
            </value>
            <value>
                <fullName>Allergic Rhinitis/Conjunctivitis (Hay Fever, Nose/Eye F</fullName>
            </value>
            <value>
                <fullName>Anemia/Blood Disorder (specify)</fullName>
            </value>
            <value>
                <fullName>Arthritis (specify)</fullName>
            </value>
            <value>
                <fullName>Asthma (specify if current attack/exacerbation)</fullName>
            </value>
            <value>
                <fullName>Bed-wetting/Enuresis (after 5 years old)</fullName>
            </value>
            <value>
                <fullName>Bronchiolitis</fullName>
            </value>
            <value>
                <fullName>Burn/Thermal Injury (specify)</fullName>
            </value>
            <value>
                <fullName>Cancer/Leukemia/Malignancy (Specify)</fullName>
            </value>
            <value>
                <fullName>Cellulitis/Abscess (Skin Infection)</fullName>
            </value>
            <value>
                <fullName>Cerebral Palsy (details under Disability tab)</fullName>
            </value>
            <value>
                <fullName>Chronic/Recurrent Skin Disease, other (specify)</fullName>
            </value>
            <value>
                <fullName>Concussion/Head Injury</fullName>
            </value>
            <value>
                <fullName>Congenital cataracts/retinoblastoma</fullName>
            </value>
            <value>
                <fullName>Constipation requiring medical care</fullName>
            </value>
            <value>
                <fullName>Convulsions or other neurologic problems</fullName>
            </value>
            <value>
                <fullName>Croup</fullName>
            </value>
            <value>
                <fullName>Cystic Fibrosis</fullName>
            </value>
            <value>
                <fullName>Dementia</fullName>
            </value>
            <value>
                <fullName>Dental Decay</fullName>
            </value>
            <value>
                <fullName>Dental Pain/Infection</fullName>
            </value>
            <value>
                <fullName>Developmental Delay</fullName>
            </value>
            <value>
                <fullName>Diabetes (specify Type 1 or 2)</fullName>
            </value>
            <value>
                <fullName>Down Syndrome (Trisomy 21)</fullName>
            </value>
            <value>
                <fullName>Ear Infection/Otitis Media (specify if frequent, recurrent)</fullName>
            </value>
            <value>
                <fullName>Eczema/Atopic Dermatitis</fullName>
            </value>
            <value>
                <fullName>Encopresis/Solling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>