force-app/main/default/objects/Disease_Conditions__c/fields/Medications_Client_Allergic_to__c.field-meta.xml
<CustomField>
    <fullName>Medications_Client_Allergic_to__c</fullName>
    <label>Medications Client Allergic to</label>
    <type>TextArea</type>
</CustomField>