force-app/main/default/objects/Disease_Conditions__c/fields/Recorded_By__c.field-meta.xml
<CustomField>
    <fullName>Recorded_By__c</fullName>
    <label>Recorded By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>