force-app/main/default/objects/Disease_Conditions__c/fields/Severity_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Severity_Symptoms__c</fullName>
    <label>Severity/Symptoms</label>
    <length>100</length>
    <type>Text</type>
</CustomField>